# sortify

./: .gitignore  README.md  data_preprocessing_v1.ipynb  data_preprocessing_v2.ipynb  data_preprocessing_v3.ipynb  data_preprocessing_v4.ipynb  few_shots_classification_bart.py  few_shots_classification_openai.py  ml_train.ipynb  nn_classification.ipynb  pyproject.toml  tags_analysis.ipynb  ticket_classification_pipeline.pkl  zero_shot_classification.py
data/: cleaned_tickets_v1.csv  cleaned_tickets_v2.csv  cleaned_tickets_v3.csv  cleaned_tickets_v4.csv  tickets.csv
utils/: file_utils.py  text_utils.py
